# CG2

./: .gitignore  CMakeLists.txt  README.md  Sources.rst  camReadMe  mainwindow.ui  openMeshCatBIG.off  openMeshCatSMALL.off  openMeshCatVERYSMALL.off
doc/Th1/: cg_HA1.tex
doc/Th2/: cg_HA2.tex
doc/Th3/: cg_HA3.tex
doc/Th4/: cg_HA4.tex
doc/Th4/res/: edgeDeletionFail.dia  halfedge.dia  hexa.dia
include/: GLWidget.hpp  Grid.hpp  Grid3D.hpp  HalfEdgeMesh.hpp  MarchingCube.hpp  Normal.h  Pos3d.hpp  RayCaster.hpp  TokenizedFile.hpp  cg2_framework.h  domain.hpp  hyperRegion.hpp  hyperSphere.hpp  leaf.hpp  limitedPriorityQueue.hpp  node.hpp  normal.hpp  object.hpp  offLoader.hpp  stopwatch.hpp  tree.hpp  ui_mainwindow.h  vec.hpp  vertex.hpp
meshes/: minimal.off
src/: GLWidget.cpp  Grid.cpp  Grid3D.cpp  HalfEdgeMesh.cpp  MarchingCube.cpp  RayCaster.cpp  TokenizedFile.cpp  domain.cpp  hyperRegion.cpp  hyperSphere.cpp  leaf.cpp  limitedPriorityQueue.cpp  main.cpp  node.cpp  normal.cpp  object.cpp  offLoader.cpp  tree.cpp  vertex.cpp
